[package]
name = "xpx-chain-crypto"
version = "1.0.6"
authors = ["ProxymaX Core Development Team","Eleazar Garrido <eleazartovar123@gmail.com>"]
edition = '2018'
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk/crypto"
homepage = "https://proximax.io"
keywords = ["cryptography", "ed25519", "curve25519", "signature"]
categories = ["cryptography"]
description = "Fast and efficient ed25519 EdDSA key generations, signing, and verification in pure Rust."
exclude = [ ".git" ]
publish = false

[lib]
name = "xpx_chain_crypto"
crate-type = ["lib"]

[dependencies.curve25519-dalek]
version = "3.1.0"
default-features = false

[dependencies.rand]
version = "0.8"
features = ["std_rng"]
default-features = false
optional = true

[dependencies.serde]
version = "^1.0"
optional = true

[dependencies.sha3]
version = "^0.9"
default-features = false

[dependencies.failure]
version = "^0.1"
default-features = false

[dependencies.aes]
version = "0.7.4"

[dependencies.block-modes]
version = "^0.8.1"

[dev-dependencies]
clear_on_drop = "0.2"
hex = "^0.4.3"

[features]
default = ["std", "u64_backend"]
std = ["curve25519-dalek/std", "rand/std", "sha3/std"]
alloc = ["curve25519-dalek/alloc"]
nightly = ["curve25519-dalek/nightly", "rand/nightly"]
u64_backend = ["curve25519-dalek/u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend"]
avx2_backend = ["curve25519-dalek/avx2_backend"]
